# analog-pde-solver-sim

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.json  ARCHITECTURE.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PAPER_DRAFT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_FINAL.md  Dockerfile  Dockerfile.dev  Dockerfile.spice  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUALITY_GATES_REPORT.md  README.md  RESEARCH_ACHIEVEMENTS.md  RESEARCH_PAPER_DRAFT.md  RESEARCH_PUBLICATION_READY.md  SECURITY.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_BREAKTHROUGH_RESEARCH_PAPER.md  TERRAGON_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  TERRAGON_SDLC_AUTONOMOUS_COMPLETION_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  (+30 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  hardware_issue.md
.github/workflows/: performance.yml  security.yml
.terragon/: config.yaml  discovery-output.json  discovery-rules.yaml  implementation-summary.json  value-metrics.json
analog_pde_solver/: __init__.py  _version.py  navier_stokes.py  solver.py
analog_pde_solver/acceleration/: __init__.py  distributed_computing.py  gpu_enhancements.py  gpu_solver.py
analog_pde_solver/benchmarks/: __init__.py  benchmark_suite.py  performance_metrics.py  quick_benchmark.py  standard_problems.py
analog_pde_solver/compiler/: __init__.py  torch_to_analog.py
analog_pde_solver/compliance/: __init__.py  data_protection.py
analog_pde_solver/core/: __init__.py  auto_scaling.py  concurrent_solver.py  crossbar.py  crossbar_robust.py  equations.py  health_monitor.py  performance_cache.py  robust_solver.py  solver.py  solver_robust.py
analog_pde_solver/deployment/: production_deployment_system.py
analog_pde_solver/i18n/: __init__.py  translations.py
analog_pde_solver/monitoring/: __init__.py  health_monitor.py  resilience_system.py
analog_pde_solver/optimization/: __init__.py  adaptive_precision.py  adaptive_scaling.py  advanced_algorithms.py  auto_scaler.py  auto_scaling_system.py  concurrent_processor.py  convergence_acceleration.py  distributed_scaling_system.py  distributed_solver.py  high_performance_solver.py  intelligent_caching.py  memory_optimizer.py  parallel_solver.py  performance_optimizer.py  performance_predictor.py
analog_pde_solver/research/: __init__.py  adaptive_precision_fusion.py  adaptive_solvers.py  advanced_analog_algorithms.py  baseline_algorithms.py  biomorphic_analog_networks.py  bioneuro_olfactory_fusion.py  breakthrough_algorithms.py  breakthrough_neural_analog_fusion.py  comprehensive_experimental_validation.py  experimental_validation.py  experimental_validation_framework.py  integrated_solver_framework.py  ml_acceleration.py  multi_physics_coupling.py  neuromorphic_acceleration.py  nonlinear_pde_analog_solvers.py  performance_optimization.py  quantum_analog_acceleration.py  quantum_error_corrected_analog.py  quantum_hybrid_algorithms.py  quantum_tensor_analog_hybrid.py  spatio_temporal_tensor_fusion.py  stochastic_analog_computing.py  validation_benchmark_suite.py  validation_layer.py
analog_pde_solver/rtl/: __init__.py  advanced_hardware_generator.py  verilog_generator.py  verilog_generator_backup.py
analog_pde_solver/security/: __init__.py  advanced_security_framework.py  automated_remediation.py  comprehensive_security.py  input_sanitizer.py  input_validation.py  threat_detector.py
analog_pde_solver/spice/: __init__.py  simulator.py
analog_pde_solver/utils/: __init__.py  logger.py  logging_config.py  tensor_ops.py  validation.py
analog_pde_solver/validation/: __init__.py  comprehensive_quality_gates.py  hardware_validator.py  pde_validator.py  quality_gates.py
analog_pde_solver/visualization/: __init__.py  hardware_monitor.py  pde_visualizer.py
automation/: dependency-updater.py
benchmark_results/: benchmark_default.json  benchmark_fast.json  comparison_report.json
breakthrough_validation_results/: comprehensive_validation_results.json  publication_report.json
deployment/: production_deploy.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  conf.py  index.rst  troubleshooting.md
docs/_static/: custom.css
docs/adr/: 0000-adr-template.md  0001-analog-crossbar-architecture.md
docs/api/: index.md
docs/automation/: README.md
docs/deployment/: README.md
examples/: advanced_algorithms_showcase.py  advanced_optimization_example.py  basic_poisson_example.py  bioneuro_olfactory_example.py  breakthrough_algorithms_demo.py  breakthrough_algorithms_showcase.py  breakthrough_validation_showcase.py  distributed_computing_example.py  global_compliance_example.py  gpu_acceleration_example.py  heat_equation_example.py  laplace_heat_demo.py  navier_stokes_example.py  poisson_demo.py  quantum_analog_example.py  rtl_generation_example.py  wave_equation_example.py
metrics/: collect-metrics.py
scripts/: autonomous-discovery.py  performance-profiler.py  run-benchmarks.py  setup-dev-env.sh  setup-dev.sh  simple-discovery.py  test-benchmarks.py  update-backlog.py  validate-workflows.py
security/: security_audit.py
tests/: __init__.py  conftest.py  test_advanced_algorithms.py  test_advanced_integration.py  test_gpu_acceleration.py  test_research_algorithms.py  test_solver.py  test_working_core.py
(+31 files in other folders)
