[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analog-pde-solver-sim"
version = "1.0.0"
description = "Simulate how resistive-mesh analog circuits solve PDEs — with energy-efficiency comparison"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Schmidt" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
